crates/plotnik-lib/tests/05-typegen/quantifiers/error_enum_internal_capture_needs_row.txt
Bad = [
  A: (identifier) @id
]*
==== diagnostics ====
warning: branch labels have no effect without capture
 --> query.ptk:1:7
  |
1 |   Bad = [
  |  _______^
2 | |   A: (identifier) @id
3 | | ]*
  | |_^
  |
help: capture the alternation (`[...] @name`) to make the labels enum variants, or remove them

error: captures `@id` repeat with `*` but aren't collected into a list
 --> query.ptk:1:7
  |
1 |   Bad = [
  |  _______^
2 | |   A: (identifier) @id
3 | | ]*
  | |__^
  |
help: add a row capture so each repeat becomes one element: `[...]* @items`
